--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "node-fetch": "^2.3.0",
-    "segmentio-facade": "^3.2.3"
+    "segmentio-facade": "^3.2.3",
+    "url": "^0.11.0"
   }
 }
